fix: pane height too small on mobile if no content

--- a/packages/web/src/stylesheets/_columns.scss
+++ b/packages/web/src/stylesheets/_columns.scss
@@ -21,7 +21,6 @@
       flex-grow: 1;
 
       .content {
-        min-height: max-content;
         overflow-y: auto;
       }
     }
